fix: fix word wrapping issue in sidebar

--- a/assets/css/workbench.less
+++ b/assets/css/workbench.less
@@ -43,9 +43,11 @@ body .lm_header {
 }
 .wb-module {
   padding: 0 !important;
+  white-space: nowrap;
 }
 .wb-module .wb-module-label {
   margin-right: 15px;
+  white-space: nowrap;
 }
 
 /* Horizontal separators in sidebar */
